# Champions.json-File-Parser

./: .gitignore  DevREADME.md  README.md  pyproject.toml
inputs/item_value_map/: championid_position_item_counts.csv
scripts/: collect.py  find_values.py
src/: collect.py  error.py  load.py  noise.py  settings.py  shared.py  validate.py
src/aliases/: affect.py  generic.py  modifers.py
src/champ_id_name_map/: __init__.py  collect.py
src/champion_ability_advanced/: collect.py  detailed_features.py  extract.py  paths.py
src/champion_ability_attributes/: collect.py  generate_final_features.py  paths.py  scaling_detection.py
src/champion_ability_ratios/: collect.py  generate_final_features.py  paths.py  scaling_detection.py
src/champion_static_basic/: __init__.py  collect.py
src/champions/: __init__.py  collect.py  communitydragon.py  normalize.py  settings.py  validate.py
src/champions/models/: __init__.py  champion_models.py
src/item_images/: __init__.py  collect.py
src/item_value_map/: collect.py  scoring.py
src/items/: __init__.py  collect.py  info.py  relationships.py
src/items/value_map/: __init__.py  collect.py  item_group_definitions.py  scoring.py
src/models/: champion_models.py
src/models/attribute_models/: affects.py  angle.py  attribute_models_abstracts.py  cast_time.py  collision_radius.py  inner_radius.py  modifiers.py
src/simulator/: __init__.py  core.py  data.py  errors.py  formulas.py  models.py  parser.py  stats.py
tests/: __init__.py  test_champion_ability_advanced.py  test_champions.py  test_simulator.py
(+5 files in other folders)
